src/Test/ElementServices/FeatureTests/TestData/bvt/parser/Errors/Error_TemplateBadTargetType1.xaml
<!--
/*******************************************************************
 * Purpose: Imprecise error message when setting TargetType of style tag.
 * Contributors: Microsoft
 *
 
  
 * Revision:         $Revision: 2 $
 
 * Filename:         $Source: //depot/devdiv/Orcas/SP/feature/WPF/wpf/Test/ElementServices/FeatureTests/TestData/bvt/parser/Errors/Error_TemplateBadTargetType1.xaml $
********************************************************************/
-->
<Canvas
    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
>
    <Canvas.Resources>
        <Style x:Key="test" TargetType="Rectangle">
            <Setter Property="Fill" Value="Blue" />
        </Style>

    </Canvas.Resources>

    <Rectangle Style="{StaticResource test}" Canvas.Top="50"
        Canvas.Left="50" Width="50" Height="50" />

</Canvas>
